--- a/css/style.css
+++ b/css/style.css
@@ -196,11 +196,12 @@ button.add_post_form_close_btn {
   }
   .main-menu li {
     padding: 0.3rem 0;
-    border-bottom: 1px solid var(--primary-text);
   }
-  .main-menu li:last-child {
-    border-bottom: none;
-    padding: 0.3rem 0 0;
+  .main-menu li img {
+    float: right;
+    width: 30px;
+    height: 30px;
+    margin-top: -5px;
   }
 }
 @media screen and (min-width: 900px) {
