theme color change sytem setup

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
 }
 .main-menu a {
   padding: 0.4rem 0.7rem;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.3s ease-in-out;
   position: relative;
 }
 .author-title:hover {
@@ -214,4 +214,68 @@ button.add_post_form_close_btn {
   .single-post {
     width: 100%;
   }
+}
+/* style_switcher system start---*/
+.style-switcher {
+  position: fixed;
+  right: 0;
+  top: 80px;
+  padding: 15px;
+  width: 200px;
+  z-index: 101;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  transform: translateX(100%);
+}
+.style-switcher.open {
+  transform: translateX(-15px);
+}
+.style-switcher .s-icon {
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  font-size: 20px;
+  color: var(--black-text);
+  cursor: pointer;
+  border-radius: 50%;
+  right: 100%;
+  margin-right: 15px;
+}
+.style-switcher .s-icon:after {
+  border-radius: 50%;
+}
+.style-switcher .s-icon i {
+  line-height: 40px;
+}
+.style-switcher .style-switcher-toggler {
+  top: 0;
+}
+.style-switcher .day-night {
+  top: 55px;
+}
+.style-switcher h4 {
+  margin: 0 0 10px;
+  color: var(--black-text);
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+.style-switcher .colors {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.style-switcher .colors span {
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+.style-switcher .color-1 {
+  background-color: #fb839e;
+}
+.style-switcher .color-2 {
+  background-color: #ec9412;
 }
