--- a/css/_global.css
+++ b/css/_global.css
@@ -58,6 +58,7 @@ section {
 .title {
   text-transform: capitalize;
   font-weight: bold;
+  color: var(--black-text);
 }
 .title span {
   color: var(--primary-text);
@@ -66,7 +67,7 @@ section {
 /*button style*/
 .primary_btn {
   background-color: var(--primary-text);
-  color: var(--white-text);
+  color: white;
   font-size: 0.8rem;
   padding: 0.5rem 0.8rem;
   border-radius: 10px;
@@ -119,6 +120,10 @@ section {
   border-radius: 10px;
   border: none;
   border: 1px solid var(--gray-text);
+  color: var(--black-text);
+}
+.comment-form input {
+  background-color: transparent;
 }
 .form-area form .input-box input:focus,
 .form-area form .input-box textarea:focus,
@@ -127,4 +132,122 @@ section {
 }
 .form-area form .input-box input[type='file'] {
   border: none;
+}
+/* Style_switcher style start---*/
+.style-switcher {
+  position: fixed;
+  right: 0;
+  top: 80px;
+  padding: 15px;
+  width: 200px;
+  z-index: 101;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  transform: translateX(100%);
+  box-shadow: var(--primary-shadow);
+}
+.style-switcher.open {
+  transform: translateX(-15px);
+}
+.style-switcher .s-icon {
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  font-size: 20px;
+  color: var(--black-text);
+  cursor: pointer;
+  border-radius: 50%;
+  right: 100%;
+  margin-right: 15px;
+  box-shadow: var(--primary-shadow);
+}
+.style-switcher .s-icon i {
+  line-height: 40px;
+}
+.style-switcher .style-switcher-toggler {
+  top: 0;
+}
+.style-switcher .day-night {
+  top: 55px;
+}
+.style-switcher h4 {
+  margin: 0 0 10px;
+  color: var(--primary-text);
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+.style-switcher .colors {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.style-switcher .colors span {
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  border-radius: 50%;
+}
+.style-switcher .color-1 {
+  background-color: #00cec9;
+}
+.style-switcher .color-2 {
+  background-color: #fb839e;
+}
+.style-switcher .color-3 {
+  background-color: #ec9412;
+}
+.style-switcher .color-4 {
+  background-color: #b33771;
+}
+.style-switcher .color-5 {
+  background-color: #9c88ff;
+}
+/* Alert-message style start---*/
+.alert-message {
+  width: fit-content;
+  position: fixed;
+  top: 100px;
+  left: 1.5rem;
+  z-index: 1;
+}
+.alert-message span {
+  padding: 10px;
+  text-align: center;
+  font-size: 0.8rem;
+  color: white;
+  background: #27ae60;
+  font-weight: bold;
+  border-radius: 10px;
+}
+.alert-message span.danger {
+  background: #d63031;
+}
+.hide-alert {
+  -webkit-animation: hideAlert 3s forwards;
+  animation: hideAlert 3s forwards;
+}
+@keyframes hideAlert {
+  0% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@-webkit-keyframes hideAlert {
+  0% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
